Keep microsim.js in the lib directory

--- a/web/index.html
+++ b/web/index.html
@@ -4,8 +4,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Microsimulation</title>
 		<link rel="stylesheet" type="text/css" href="style.css"/>
-		<script type="text/javascript" src="microsim.js"></script>
 		<script type="text/javascript" src="lib/tempo.min.js"></script>
+		<script type="text/javascript" src="lib/microsim.js"></script>
 		<script type="text/javascript" src="script.js"></script>
 		<noscript>
 			<p class="error"><strong>This client-side application requires a Javascript enabled browser</strong></p>
