Add input field for population size

--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,10 @@
 	<body>
 		<h1>Microsimulation</h1>
 
+		<form id="input" action="">
+			<p><label for="population-size">Population size:</label> <input id="population-size" name="population-size" value="100" /></p>
+		</form>
+
 		<table id="result">
 			<tr>
 				<th align="left" class="first">State</th>
