Add submit button

--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
 		<h1>Microsimulation</h1>
 
 		<form id="input" action="">
-			<p><label for="population-size">Population size:</label> <input id="population-size" name="population-size" value="100" /></p>
+			<p><label for="population-size">Population size:</label> <input id="population-size" name="population-size" value="100" /> <input type="submit" value="Run"/></p>
 		</form>
 
 		<table id="result">
