Move noscript element from head to body

--- a/web/index.html
+++ b/web/index.html
@@ -7,11 +7,12 @@
 		<script type="text/javascript" src="lib/tempo.min.js"></script>
 		<script type="text/javascript" src="lib/microsim.js"></script>
 		<script type="text/javascript" src="script.js"></script>
-		<noscript>
-			<p class="error"><strong>This client-side application requires a Javascript enabled browser</strong></p>
-		</noscript>
 	</head>
 	<body>
+		<noscript>
+			<strong class="error">This client-side application requires a Javascript enabled browser</strong>
+		</noscript>
+
 		<h1>Microsimulation</h1>
 
 		<form id="input" action="">
