Add execution time

--- a/web/index.html
+++ b/web/index.html
@@ -31,5 +31,9 @@
 				<td align="right" class="last">{{meanAge | format 2}}</td>
 			</tr>
 		</table>
+
+		<div id="execution-time" class="discrete">
+			<p data-template>Execution time: {{[0] | format 1}} seconds</p>
+		</div>
 	</body>
 </html>
