--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,8 @@
 
 		<h1>Microsimulation</h1>
 
+		<p>Move a population of <var>N</var> individuals through a set of <var>M</var> states from healthy to dead, and for each state, record the number of visits and the mean age of a person entering that state.</p>
+
 		<form id="input" action="">
 			<p><label for="population-size">Population size:</label> <input id="population-size" name="population-size" value="100" /> <input type="submit" value="Run"/></p>
 		</form>
