--- a/web/index.html
+++ b/web/index.html
@@ -21,21 +21,27 @@
 			<p><label for="population-size">Population size:</label> <input id="population-size" name="population-size" value="100" /> <input type="submit" value="Run"/></p>
 		</form>
 
-		<table id="result">
-			<tr>
-				<th align="left" class="first">State</th>
-				<th align="left">Frequency</th>
-				<th align="left" class="last">Mean age</th>
-			</tr>
-			<tr data-template="data-template">
-				<td align="left" class="first">{{state}}</td>
-				<td align="right">{{freq | format 2}}</td>
-				<td align="right" class="last">{{meanAge | format 2}}</td>
-			</tr>
-		</table>
+		<div id="output">
+			<table id="result-table">
+				<tr>
+					<th align="left" class="first">State</th>
+					<th align="left">Frequency</th>
+					<th align="left" class="last">Mean age</th>
+				</tr>
+				<tr data-template="data-template">
+					<td align="left" class="first">{{state}}</td>
+					<td align="right">{{freq | format 2}}</td>
+					<td align="right" class="last">{{meanAge | format 2}}</td>
+				</tr>
+			</table>
 
-		<div id="execution-time" class="discrete">
-			<p data-template="data-template">Execution time: {{[0] | format 1}} seconds</p>
+			<div id="execution-time" class="discrete">
+				<p data-template="data-template">Execution time: {{[0] | format 1}} seconds</p>
+			</div>
+		</div>
+
+		<div id="error" class="error">
+			<p data-template="data-template">Invalid input: &quot;{{[0]}}&quot;</p>
 		</div>
 	</body>
 </html>
