--- a/web/index.html
+++ b/web/index.html
@@ -18,9 +18,9 @@
 		<p>Move a population of <var>N</var> individuals through a set of <var>M</var> states from healthy to dead, and for each state, record the number of visits and the mean age of a person entering that state.</p>
 
 		<form id="input" action="">
-			<p><label for="population-size">Population size:</label> <input id="population-size" name="population-size" value="100" /> <input type="submit" value="Run"/></p>
+			<p><label for="population-size">Population size:</label> <input id="population-size" name="population-size" value="1000" /> <input type="submit" value="Run"/> <span id="preloader" class="discrete" style="margin-left: 1em; font-style: italic">Executing...</span></p>
 		</form>
-
+		
 		<div id="output">
 			<table id="result-table">
 				<tr>
