Change probability ditribution of natural death from exponential to Weibull and replace the word "Frequency" with "Probability" in the result table (patch from Mark)

--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,7 @@
 			<table id="result-table">
 				<tr>
 					<th align="left" class="first">State</th>
-					<th align="left">Frequency</th>
+					<th align="left">Probability</th>
 					<th align="left" class="last">Mean age</th>
 				</tr>
 				<tr data-template="data-template">
