Improve names of some identifiers

--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
 		</form>
 		
 		<div id="output">
-			<table id="result-table">
+			<table id="summary">
 				<tr>
 					<th align="left" class="first">State</th>
 					<th align="left">Probability</th>
