Adjustment of chart width and margins

--- a/web/index.html
+++ b/web/index.html
@@ -38,8 +38,8 @@
 				</tr>
 			</table>
 			
-			<div style="text-align: center">
-				<p id="chart-title" class="discrete"><span data-template="data-template">{{[0]}}<span></p>
+			<div style="text-align: center; margin: 2em 0">
+				<p id="chart-title" class="discrete"><em data-template="data-template">{{[0]}}</em></p>
 			
 				<div id="chart"></div>
 			
